test compiling and running