@@ -1,1 +1,23 @@
 # SIA-TP1
+
+Instrucciones de descarga:
+
+1. Ingresar al siguiente link: https://gluonhq.com/products/javafx/
+2. Descargar el SDK correspondiente para su computadora (Linux, Mac o Windows) y recordar el directorio de la descarga
+
+``/Users/user/Downloads/javafx-sdk-11.0.2`` < utilizamos este path como ejemplo
+
+Instrucciones de compilación del proyecto:
+
+1. Una vez clonado el repositorio, en la terminal dirigirse a /src/main/java y ejecutar los siguientes comandos en orden:
+
+`export PATH_TO_FX=/Users/user/Downloads/javafx-sdk-11.0.2/lib`  
+`javac --module-path $PATH_TO_FX --add-modules javafx.controls Graphics.java`  
+
+Instrucciones de ejecución del programa:
+
+1. Una vez compilado el proyecto, podemos seleccionar las configuraciones para ejecutar el solver. 
+
+
+
+ 
